[gd_scene load_steps=19 format=3 uid="uid://clxx6psfl5py8"]

[ext_resource type="Script" path="res://Code/PlayerBodyController.gd" id="1_ihx5p"]
[ext_resource type="PackedScene" uid="uid://cbkuu0rnihxcb" path="res://ScenePrefabs/ArmsPrefab.tscn" id="2_rc0bo"]
[ext_resource type="AudioStream" uid="uid://jmhaydx8yumc" path="res://Audio/Footsteps/JumpStop 3-Gravel.wav" id="2_ybi4v"]
[ext_resource type="PackedScene" uid="uid://b1q5ius1kk33c" path="res://ScenePrefabs/Effects/DustMotes.tscn" id="3_xjbb1"]
[ext_resource type="AudioStream" uid="uid://cjgi0v3hge0pn" path="res://Audio/Footsteps/JumpStop 4-Gravel.wav" id="3_yx4av"]
[ext_resource type="Script" path="res://Code/Enemies/Damageable.gd" id="4_lx6gb"]
[ext_resource type="AudioStream" uid="uid://byqqgmalv0you" path="res://Audio/Footsteps/JumpStop 5-Gravel.wav" id="4_n7dr6"]
[ext_resource type="Script" path="res://Code/Player/PlayerHealthController.gd" id="4_qb7uh"]
[ext_resource type="Material" uid="uid://bh7tilovklono" path="res://Materials/Player/DamageOverlayMaterial.tres" id="5_grkj1"]
[ext_resource type="AudioStream" uid="uid://bc56y80j3e74s" path="res://Audio/Footsteps/JumpStop 6-Gravel.wav" id="5_sy6q7"]
[ext_resource type="AudioStream" uid="uid://lswsxtj5qqdy" path="res://Audio/Footsteps/JumpStop 7-Gravel.wav" id="6_52gq0"]
[ext_resource type="AudioStream" uid="uid://r60j333ha0qm" path="res://Audio/Player/PC_Hurt_01.wav" id="11_m4ho4"]
[ext_resource type="AudioStream" uid="uid://baj6tx3xikrck" path="res://Audio/Player/PC_Hurt_02.wav" id="12_ewvko"]
[ext_resource type="AudioStream" uid="uid://bsceveubgp3g0" path="res://Audio/Player/PC_Hurt_03.wav" id="13_ffldr"]
[ext_resource type="AudioStream" uid="uid://bs45dd6pfpqq0" path="res://Audio/Player/PC_Hurt_04.wav" id="14_p6lw1"]
[ext_resource type="AudioStream" uid="uid://x12xtt6icygh" path="res://Audio/Player/PC_Death_Sound.wav" id="15_yqoxt"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gch08"]
frequency = 0.0999

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uioy7"]

[node name="PlayerBody" type="CharacterBody3D" node_paths=PackedStringArray("GunEffects", "CameraNode", "CameraActual", "ArmsNode", "animationTree")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.28412, 0.668381, 0)
collision_layer = 2
floor_max_angle = 1.0472
script = ExtResource("1_ihx5p")
GunEffects = NodePath("ArmsContainer/ArmsMesh/WeaponEffectsController")
CameraNode = NodePath("CameraContainer")
CameraActual = NodePath("CameraContainer/Camera3D")
ArmsNode = NodePath("ArmsContainer")
animationTree = NodePath("ArmsContainer/ArmsMesh/AnimationTree")
HandStateMachinePlaybackPath = "parameters/playback"
IdleAnimationName = "LowIdle"
AimingAnimationName = "AimingIdle"
IdleFireAnimationName = "Lowfire"
AimingFireAnimationName = "Aimingfire"
IdleReloadAnimationName = "Lowreload"
AimingReloadAnimationName = "Aimingreload"
FootstepSounds = Array[AudioStream]([ExtResource("2_ybi4v"), ExtResource("3_yx4av"), ExtResource("4_n7dr6"), ExtResource("5_sy6q7"), ExtResource("6_52gq0")])
CameraShake_Noise = SubResource("FastNoiseLite_gch08")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_uioy7")

[node name="ArmsContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)

[node name="ArmsMesh" parent="ArmsContainer" instance=ExtResource("2_rc0bo")]

[node name="WeaponEffectsController" parent="ArmsContainer/ArmsMesh" index="3" node_paths=PackedStringArray("PlayerBodyNode", "CameraNode")]
PlayerBodyNode = NodePath("../../..")
CameraNode = NodePath("../../../CameraContainer/Camera3D")

[node name="CameraContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="Camera3D" type="Camera3D" parent="CameraContainer"]
current = true
fov = 60.0

[node name="DustMotes" parent="." instance=ExtResource("3_xjbb1")]

[node name="Damageable" type="Node" parent="."]
script = ExtResource("4_lx6gb")

[node name="PlayerHealthController" type="Node" parent="." node_paths=PackedStringArray("PlayerBody", "PlayerCamera")]
script = ExtResource("4_qb7uh")
HurtSounds = Array[AudioStream]([ExtResource("11_m4ho4"), ExtResource("12_ewvko"), ExtResource("13_ffldr"), ExtResource("14_p6lw1")])
PlayerDeathSound = ExtResource("15_yqoxt")
PlayerBody = NodePath("..")
PlayerCamera = NodePath("../CameraContainer/Camera3D")
DamageEffectMaterial = ExtResource("5_grkj1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DamageOverlay" type="ColorRect" parent="CanvasLayer"]
material = ExtResource("5_grkj1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="OnShotCameraImpulse" from="ArmsContainer/ArmsMesh/WeaponEffectsController" to="." method="ImpulseCameraWithRecoil"]
[connection signal="OnDamage" from="Damageable" to="PlayerHealthController" method="OnDamaged"]

[editable path="ArmsContainer/ArmsMesh"]
[editable path="ArmsContainer/ArmsMesh/Player_Rig/Skeleton3D/LeftHandItemAttachment/FlashlightMesh"]
